<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/day_list_recycler"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical" app:layout_constraintTop_toBottomOf="@+id/day_picker_title"/>

    <Button
        android:id="@+id/days_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp" android:gravity="center" android:text="@string/cancel_btn"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/day_list_recycler"/>

    <Button
        android:id="@+id/days_ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
        android:gravity="center" android:text="@string/ok_btn" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_list_recycler"/>
    <TextView
        android:id="@+id/day_picker_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp" android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" android:layout_marginTop="8dp" android:text="@string/day_title"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>